data/derived/fa15/progs/unify/prog2210.ml.out
Characters 119-132:
  | hea :: tail -> a ^ sep ^ hea in
                   ^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         string list
